# practice_vstu

./: Geometry.h  README.md  circle.cpp  circle_h.h  circle_main  circle_main.cpp  parallelogram.cpp  parallelogram.h  parallelogram_main  parallelogram_main.cpp  parallelogramm.h  parallelogramm_main.cpp  practice  practice.cpp  rectangle.cpp  rectangle.h  rectangle_main  rectangle_main.cpp  trapezoid.cpp  trapezoid.h  trapezoid_main  trapezoid_main.cpp  triangle.cpp  triangle.h  triangle_main  triangle_main.cpp
TriangleProject/: CMakeLists.txt
TriangleProject/src/: triangle.cpp
TriangleProject/tests/: CMakeLists.txt  test_triangle.cpp
circleProject/: CMakeLists.txt
circleProject/src/: CMakeLists.txt  circle.cpp  circle_h.h
circleProject/tests/: CMakeLists.txt  test_circle.cpp
parallelogrammProject/: CMakeLists.txt
parallelogrammProject/src/: CMakeLists.txt  parallelogram.cpp  parallelogram.h
parallelogrammProject/tests/: CMakeLists.txt  test_parallelogram.cpp
rectangleProject/: CMakeLists.txt
rectangleProject/src/: CMakeLists.txt  rectangle.cpp  rectangle.h
rectangleProject/tests/: CMakeLists.txt  test_rectangle.cpp
trapezoidProject/: CMakeLists.txt
trapezoidProject/scr/: CMakeLists.txt
trapezoidProject/src/: CMakeLists.txt
trapezoidProject/tests/: CMakeLists.txt  test_trapezoid.cpp
